--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data    
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAlodqyYrUJpYPmfqbD7yJb7-bpXygMkfE" />
     </application>
 </manifest>
