--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   firebase_auth: ^3.11.1
   flutter_native_splash: ^2.2.10+1
   shared_preferences: ^2.0.15
+  dio : ^4.0.0
+  flutter_polyline_points : ^0.2.6
+  google_maps_flutter : ^2.0.2
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/animation/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
